<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paulaperez.appfinalv10.ActivityRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gita"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Registration"
                android:textSize="30dp"
                android:textColor="@android:color/black"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:gravity="center">
            <!--<TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center"
                android:textAlignment="center"/>-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/name"
                android:gravity="center"

                android:id="@+id/register_etName"
                android:textColor="@android:color/darker_gray"
                android:backgroundTint="@android:color/holo_blue_dark"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <!--<TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center"
                android:textAlignment="center"/>-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user"
                android:id="@+id/register_etUser"
                android:textColor="@android:color/darker_gray"
                android:backgroundTint="@android:color/holo_blue_dark"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            >
            <!--<TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pass"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dp"
                android:textAlignment="center" />-->

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pass"
                android:id="@+id/register_etPass"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                android:backgroundTint="@android:color/holo_blue_dark" />
            <!--
                        android:inputType="numberPassword"
            -->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <!--<TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/passC"
                android:textAlignment="center"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dp" />-->

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/passC"
                android:id="@+id/register_etPassC"
                android:textColor="@android:color/darker_gray"
                android:gravity="center"
                android:backgroundTint="@android:color/holo_blue_dark" />
            <!--
                        android:inputType="numberPassword"
            -->

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <!--<TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dp"
                android:text="@string/email"
                android:textAlignment="center" />-->

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:layout_weight="1"
                android:text="@string/email"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:id="@+id/register_etEmail"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"></LinearLayout>


        <Button
            android:id="@+id/register_btRegister"

            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Register"
            android:textAlignment="center"
            android:background="@android:color/black"
            android:textColor="@android:color/white" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_results_tv"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
